--- a/3-inversify-supertest-e2e/package.json
+++ b/3-inversify-supertest-e2e/package.json
@@ -8,6 +8,7 @@
     "test": "jest",
     "build": "tsc",
     "test:watch": "jest --watch --verbose",
+    "test:e2e": "jest --verbose --config ./e2e/jest.e2e-config.ts",
     "lint": "eslint . --ext .ts",
     "gen:module": "bystro module-template ./src",
     "prepare": "husky install"
@@ -15,14 +16,20 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "2.30.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "inversify": "^6.0.1",
     "jest-mock-extended": "^2.0.4",
     "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0",
+    "supertest": "^6.1.6",
     "ts-guard-clause": "^0.0.7"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.10",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "dotenv": "^10.0.0",
